--- a/simple_index.html
+++ b/simple_index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
+<!--
+
+Use lowercase only in filenames!
+Your comments are not using two hyphens. (use a simple text editor, not Word)
+language should be set to en, not eng
+
+-->
+
 <!— 
 Project Name: A Simple Website (HW2)
 Author: Alyssa Garcia
 Date Last Modified: 24 March 2019
 GibHub User: amgarcia112
 —>
+
 	<title>Home</title>
 	<meta charset="utf-8">
 </head>
